<resources>
    <string name="app_name">Tips Calculator</string>
    <string name="summary_subtitle">See bellow the summary of your bill:</string>
    <string name="total_table">Total table</string>
    <string name="num_of_people">Number of people</string>
    <string name="percentage">Percentage</string>
    <string name="summary">Summary</string>
    <string name="total">TOTAL:</string>
    <string name="refresh">Refresh</string>
    <string name="main_subtitle">Fulfill the bellow fields:</string>
    <string name="table_amount_label">Type the table amount:</string>
    <string name="table_amount_hint">$ 100.00</string>
    <string name="num_people_label">Number of people:</string>
    <string name="num_of_people_hint">4</string>
    <string name="percentage_label">Percentage of tip:</string>
    <string name="percentage_tip_hint">10%</string>
    <string name="clean">Clean</string>
    <string name="calculate">Calculate</string>
</resources>